# pletbjerg.github.io

./: .gitignore  CHANGELOG.md  ChangeLog.md  LICENSE  README.md  flake.nix  index.html  package.yaml  pletbjerg-github-io.cabal  pletbjerg.cabal
_site/: index.html
app/: Main.hs
doc/: index.html
docs/: index.html
docs/posts/HelloAgain/: main.html  main.json
docs/posts/HelloWorld/: main.html  main.json
docs/posts/KattisClassrooms/: main.html  main.json
posts/: index.tex
posts/HelloWorld/: main.tex
posts/KattisClassrooms/: Classrooms.c  Classrooms.hs  main.tex
templates/: index.html  post.html
