cabal-version:      3.0
name:               pletbjerg-github-io
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             christian
maintainer:         <>

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable pletbjerg-github-io
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base,
        shake,
        pandoc,
        pandoc-types,
        exceptions,
        data-default,
        bytestring,
        aeson,
        text,
        binary,
        doclayout,
        mtl,
        doctemplates,
        time,

    hs-source-dirs:   app
    default-language: Haskell2010

